2006-06-02  Jeffrey Stedfast  <fejj@novell.com>

	* camel/camel-stub-marshal.c (do_read): Patch to my last
	patch. Oops, camel_read() doesn't guarantee that it will read 'n'
	requested bytes (as camel_write() guarantees that it will write
	'n' bytes), it is just a cancellable read() implementation. This
	should fix bug #179566.

2006-05-23  Nancy  <nancy.cai@sun.com>

	Fix #341803
	* storage/Makefile.am:replace "ximian-connector-setup" by
	"exchange-connector-setup"

2006-05-17  Harish Krishnaswamy  <kharish@novell.com>

	* configure.in: Append -DLDAP_DEPRECATED to LDAP_CFLAGS and
	do not overwrite the value.

2006-05-12  Brian Pepple  <bdpepple@gmail.com>

	* po/LINGUAS: New file listing all supported languages.

	* configure.in: Use po/LINGUAS instead of including all languages
	directly in this file. See the wiki for more information:
	http://live.gnome.org/GnomeGoals/PoLinguas

2006-05-12  Sushma Rai  <rsushma@novell.com>

	* configure.in : Bumped the version to 2.7.2
	* NEWS : Updated

2006-05-12  Sankar P  <psankar@novell.com>

	* Committed on behalf of Patrick Ohly <patrick.ohly@intel.com> 
	* camel-stub.c: (stub_send_internal):
	Adds a NULL check before proceeding further
	
2006-05-11  Chenthill Palanisamy  <pchenthill@novell.com>

	Fix #341229
	* calendar/e-cal-backend-exchange-calendar.c:
	(modify_object_with_href): Set the old object so 
	that it gets refreshed properly.

2006-05-11  Chenthill Palanisamy  <pchenthill@novell.com>

	Fixes #339561
	* calendar/e-cal-backend-exchange-calendar.c:
	(modify_object_with_href): check for modification of end times.
				   
2006-05-11  Chenthill Palanisamy  <pchenthill@novell.com>

	Fixes #339827
	* calendar/e-cal-backend-exchange-calendar.c: (add_vevent),
	(get_changed_events), (create_object), (modify_object),
	(modify_object_with_href), (remove_object), (receive_objects),
	(book_resource), (discard_alarm):
	* calendar/e-cal-backend-exchange-tasks.c: (get_changed_tasks),