@@ -1,3 +1,12 @@
+2006-06-12  simon.zheng  <simon.zheng@sun.com>
+
+        Fix for #336453
+
+	* acinclude.m4:
+	* configure.in:
+	* addressbook/e-book-backend-gal.h:
+        Add SunLDAP library support - a variant of Netscape LDAP.
+
 2006-06-02  Jeffrey Stedfast  <fejj@novell.com>
 
 	* camel/camel-stub-marshal.c (do_read): Patch to my last
